-增加应用商店

--- a/src/locales/zh_CN.properties
+++ b/src/locales/zh_CN.properties
@@ -3286,5 +3286,15 @@
 "state.suspended": "\u5DF2\u6682\u505C",
 "title.upload.volume": "\u4E0A\u4F20\u5377",
 "user.login": "Login",
-"user.logout": "Logout"
+"user.logout": "Logout",
+
+
+"label.appmanager.appname":"\u5E94\u7528\u540D\u79F0",
+"label.appmanager.appdescription":"\u5E94\u7528\u63CF\u8FF0",
+"label.appmanager.instance":"\u6240\u5C5E\u5B9E\u4F8B",
+"label.appmanager.appstatus":"\u5E94\u7528\u72B6\u6001",
+"label.appmanager.installtime":"\u5B89\u88C5\u65F6\u95F4",
+"label.appmanager.operation":"\u64CD\u4F5C"
+
+
 }
