chore: 文案修改 & 底部信息删除

--- a/src/locales/nb_NO.json
+++ b/src/locales/nb_NO.json
@@ -852,8 +852,8 @@
 "label.installwizard.addzoneintro.subtitle": "Hva er en sone?",
 "label.installwizard.addzoneintro.title": "La oss legge til en sone",
 "label.installwizard.click.launch": "Klikk startknappen.",
-"label.installwizard.subtitle": "Denne veiviseren vil hjelpe deg i din installasjon av CloudStack&#8482",
-"label.installwizard.title": "Hei og velkommen til CloudStack&#8482",
+"label.installwizard.subtitle": "Denne veiviseren vil hjelpe deg i din installasjon av CloudStack™",
+"label.installwizard.title": "Hei og velkommen til CloudStack™",
 "label.instance": "Instans",
 "label.instance.name": "Instans Navn",
 "label.instance.scaled.up": "Instans skalert til forespurt tilbud",
@@ -871,7 +871,7 @@
 "label.internallbvm": "InternalLbVm",
 "label.interval": "Sjekkintervall (i sekunder)",
 "label.intervaltype": "Intervalltype",
-"label.introduction.to.cloudstack": "Introduksjon til CloudStack&#8482",
+"label.introduction.to.cloudstack": "Introduksjon til CloudStack™",
 "label.invalid.integer": "Ugyldig heltall",
 "label.invalid.number": "Ugyldig tall",
 "label.invitations": "Invitasjoner",
@@ -1860,7 +1860,7 @@
 "label.weekly": "Ukentlig",
 "label.welcome": "Velkommen",
 "label.welcome.cloud.console": "Velkommen til administrasjonskonsollet",
-"label.what.is.cloudstack": "Hva er CloudStack&#8482?",
+"label.what.is.cloudstack": "Hva er CloudStack™?",
 "label.writecachetype": "Write-cache Type",
 "label.xennetworklabel": "XenServer trafikketikett",
 "label.xenservertoolsversion61plus": "Original XS versjon er 6.1+",
@@ -2157,8 +2157,8 @@
 "message.installwizard.copy.whatisahost": "En vert er en enkelt datamaskin. Verter tilbyr ressurser som kan gj\u00f8re virtuelle gjester. Hver vert har hypervisor-programvare installert for \u00e5 administrere gjestene (bortsett fra r\u00e5jern-verter, som er et spesialtilfelle diskutert i den avanserte installasjonsguiden). For eksempel, en Linux KVM-aktivert server, en Citrix XenServer server og en ESXi server er verter. I en enkel installasjon bruker vi en enkelt vert som kj\u00f8rer XenServer eller KVM.<br/><br/>Verten er den minste organisasjonsenheten i en CloudStack-installasjon. Verter er del av klynger, klynger er del av poder og poder er del av soner.",
 "message.installwizard.copy.whatisapod": "En pod representerer ofte et enkelt rack. Verter i samme pod er i samme subnett.<br/><br/>En pod er den nest st\u00f8rste enheten i en CloudStack-installasjon. Poder er en del av soner. Hver sone kan inneholde en eller flere poder; i en enkel installasjon vil du kun ha en pod i sonen.",
 "message.installwizard.copy.whatisazone": "En sone er den st\u00f8rste gruppe enheten i en CloudStack installasjon. En sone er typisk sett p\u00e5 som et datasenter, selv om man kan ha flere datasenter i en sone. CloudStack infrastrukturen kan deles inn i soner for \u00e5 isolere og \u00e5 gi redundans. Hver sone kan for eksempel ha sin egen data senter str\u00f8mtilf\u00f8rsel og nettverkslink, og soner kan v\u00e6re spredd over st\u00f8rre distanser.",
-"message.installwizard.copy.whatiscloudstack": "CloudStack&#8482 er en programvare-plattform som grupperer dataressurser for \u00e5 bygge offentlige, private og hybride infrastruktur som en tjeneste (IaaS) skyer. CloudStack&#8482 administrerer nettverk, lagring og regnekraft-verter som til sammen blir en sky-infrastruktur. Bruk CloudStack&#8482 til \u00e5 distribuere, administrerre og konfigurere dine skyressurser og milj\u00f8er.<br/><br/>Utvid forbi individuelle virtuelle gjester som kj\u00f8rer p\u00e5 typisk maskinvare, CloudStack&#8482 gir en skybasert infrastruktur-programvare for levering av virtuelle datasentre som en tjeneste - lever alle de essensielle komponenente for \u00e5 bygge, distribuere og administrere multi-tier og multi-tenant sky-applikasjoner. B\u00e5de fri kildekode- og premium-versjoner er tilgjengelig, hvor den fri kildekode-basert gir tiln\u00e6rmet samme funksjonalitet.",
-"message.installwizard.copy.whatisprimarystorage": "En CloudStack&#8482 sky-infrastruktur tar i bruk to typer lagring: prim\u00e6rlagring og sekund\u00e6rlagring. <br/><br/><strong>Prim\u00e6rlagring</strong> er assosiert med en klynge, og lagrer datadisker for hver gjest som kj\u00f8rer i den klyngen. Prim\u00e6rlagring er typisk plassert n\u00e6rt den faktiske verten.",
+"message.installwizard.copy.whatiscloudstack": "CloudStack™ er en programvare-plattform som grupperer dataressurser for \u00e5 bygge offentlige, private og hybride infrastruktur som en tjeneste (IaaS) skyer. CloudStack™ administrerer nettverk, lagring og regnekraft-verter som til sammen blir en sky-infrastruktur. Bruk CloudStack™ til \u00e5 distribuere, administrerre og konfigurere dine skyressurser og milj\u00f8er.<br/><br/>Utvid forbi individuelle virtuelle gjester som kj\u00f8rer p\u00e5 typisk maskinvare, CloudStack™ gir en skybasert infrastruktur-programvare for levering av virtuelle datasentre som en tjeneste - lever alle de essensielle komponenente for \u00e5 bygge, distribuere og administrere multi-tier og multi-tenant sky-applikasjoner. B\u00e5de fri kildekode- og premium-versjoner er tilgjengelig, hvor den fri kildekode-basert gir tiln\u00e6rmet samme funksjonalitet.",
+"message.installwizard.copy.whatisprimarystorage": "En CloudStack™ sky-infrastruktur tar i bruk to typer lagring: prim\u00e6rlagring og sekund\u00e6rlagring. <br/><br/><strong>Prim\u00e6rlagring</strong> er assosiert med en klynge, og lagrer datadisker for hver gjest som kj\u00f8rer i den klyngen. Prim\u00e6rlagring er typisk plassert n\u00e6rt den faktiske verten.",
 "message.installwizard.copy.whatissecondarystorage": "Sekund\u00e6rlagring er assosiert med en sone, og lagrer f\u00f8lgende: <ul><li>Maler - OS-bilder som kan brukes til \u00e5 starte opp virtuelle gjester og kan inkludere ekstra konfigurasjon, som installerte applikasjoner</li><li>ISO-bilder - Bilder som kan v\u00e6re bootbare eller ikke-bootbare.</li><li>Diskvolum \u00f8yeblikksbilder - Lagrede kopier av virtuelle gjester som kan benyttes til rekonstruksjon eller for \u00e5 lage nye maler</li></ul>",
 "message.installwizard.now.building": "Bygger n\u00e5 din nettsky...",
 "message.installwizard.tooltip.addcluster.name": "Klyngenavnet. Dette kan v\u00e6re hva som helst og er ikke benyttet av CloudStack.",
