--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -852,8 +852,8 @@
 "label.installwizard.addzoneintro.subtitle": "What is a zone?",
 "label.installwizard.addzoneintro.title": "Let&rsquo;s add a zone",
 "label.installwizard.click.launch": "Click the launch button.",
-"label.installwizard.subtitle": "This tour will aid you in setting up your CloudStack&#8482 installation",
-"label.installwizard.title": "Hello and Welcome to CloudStack&#8482",
+"label.installwizard.subtitle": "This tour will aid you in setting up your CloudStack™ installation",
+"label.installwizard.title": "Hello and Welcome to CloudStack™",
 "label.instance": "Instance",
 "label.instance.name": "Instance Name",
 "label.instance.scaled.up": "Instance scaled to the requested offering",
@@ -871,7 +871,7 @@
 "label.internallbvm": "InternalLbVm",
 "label.interval": "Polling Interval (in sec)",
 "label.intervaltype": "Interval Type",
-"label.introduction.to.cloudstack": "Introduction to CloudStack&#8482",
+"label.introduction.to.cloudstack": "Introduction to CloudStack™",
 "label.invalid.integer": "Invalid Integer",
 "label.invalid.number": "Invalid Number",
 "label.invitations": "Zaproszenia",
@@ -1860,7 +1860,7 @@
 "label.weekly": "Tygodniowo",
 "label.welcome": "Witaj",
 "label.welcome.cloud.console": "Welcome to Management Console",
-"label.what.is.cloudstack": "Czym jest CloudStack&#8482?",
+"label.what.is.cloudstack": "Czym jest CloudStack™?",
 "label.writecachetype": "Write-cache Type",
 "label.xennetworklabel": "XenServer traffic label",
 "label.xenservertoolsversion61plus": "Original XS Version is 6.1+",
@@ -2153,12 +2153,12 @@
 "message.host.dedicated": "Host Dedicated",
 "message.host.dedication.released": "Host dedication released",
 "message.installwizard.click.retry": "Click the button to retry launch.",
-"message.installwizard.copy.whatisacluster": "A cluster provides a way to group hosts. The hosts in a cluster all have identical hardware, run the same hypervisor, are on the same subnet, and access the same shared storage. Virtual machine instances (VMs) can be live-migrated from one host to another within the same cluster, without interrupting service to the user. A cluster is the third-largest organizational unit within a CloudStack&#8482; deployment. Clusters are contained within pods, and pods are contained within zones.<br/><br/>CloudStack&#8482; allows multiple clusters in a cloud deployment, but for a Basic Installation, we only need one cluster.",
-"message.installwizard.copy.whatisahost": "A host is a single computer. Hosts provide the computing resources that run the guest virtual machines. Each host has hypervisor software installed on it to manage the guest VMs (except for bare metal hosts, which are a special case discussed in the Advanced Installation Guide). For example, a Linux KVM-enabled server, a Citrix XenServer server, and an ESXi server are hosts. In a Basic Installation, we use a single host running XenServer or KVM.<br/><br/>The host is the smallest organizational unit within a CloudStack&#8482; deployment. Hosts are contained within clusters, clusters are contained within pods, and pods are contained within zones.",
-"message.installwizard.copy.whatisapod": "A pod often represents a single rack. Hosts in the same pod are in the same subnet.<br/><br/>A pod is the second-largest organizational unit within a CloudStack&#8482; deployment. Pods are contained within zones. Each zone can contain one or more pods; in the Basic Installation, you will have just one pod in your zone.",
-"message.installwizard.copy.whatisazone": "A zone is the largest organizational unit within a CloudStack&#8482; deployment. A zone typically corresponds to a single datacenter, although it is permissible to have multiple zones in a datacenter. The benefit of organizing infrastructure into zones is to provide physical isolation and redundancy. For example, each zone can have its own power supply and network uplink, and the zones can be widely separated geographically (though this is not required).",
-"message.installwizard.copy.whatiscloudstack": "CloudStack&#8482 is a software platform that pools computing resources to build public, private, and hybrid Infrastructure as a Service (IaaS) clouds. CloudStack&#8482 manages the network, storage, and compute nodes that make up a cloud infrastructure. Use CloudStack&#8482 to deploy, manage, and configure cloud computing environments.<br/><br/>Extending beyond individual virtual machine images running on commodity hardware, CloudStack&#8482 provides a turnkey cloud infrastructure software stack for delivering virtual datacenters as a service - delivering all of the essential components to build, deploy, and manage multi-tier and multi-tenant cloud applications. Both open-source and Premium versions are available, with the open-source version offering nearly identical features.",
-"message.installwizard.copy.whatisprimarystorage": "A CloudStack&#8482; cloud infrastructure makes use of two types of storage: primary storage and secondary storage. Both of these can be iSCSI or NFS servers, or localdisk.<br/><br/><strong>Primary storage</strong> is associated with a cluster, and it stores the disk volumes of each guest VM for all the VMs running on hosts in that cluster. The primary storage server is typically located close to the hosts.",
+"message.installwizard.copy.whatisacluster": "A cluster provides a way to group hosts. The hosts in a cluster all have identical hardware, run the same hypervisor, are on the same subnet, and access the same shared storage. Virtual machine instances (VMs) can be live-migrated from one host to another within the same cluster, without interrupting service to the user. A cluster is the third-largest organizational unit within a CloudStack™; deployment. Clusters are contained within pods, and pods are contained within zones.<br/><br/>CloudStack™; allows multiple clusters in a cloud deployment, but for a Basic Installation, we only need one cluster.",
+"message.installwizard.copy.whatisahost": "A host is a single computer. Hosts provide the computing resources that run the guest virtual machines. Each host has hypervisor software installed on it to manage the guest VMs (except for bare metal hosts, which are a special case discussed in the Advanced Installation Guide). For example, a Linux KVM-enabled server, a Citrix XenServer server, and an ESXi server are hosts. In a Basic Installation, we use a single host running XenServer or KVM.<br/><br/>The host is the smallest organizational unit within a CloudStack™; deployment. Hosts are contained within clusters, clusters are contained within pods, and pods are contained within zones.",
+"message.installwizard.copy.whatisapod": "A pod often represents a single rack. Hosts in the same pod are in the same subnet.<br/><br/>A pod is the second-largest organizational unit within a CloudStack™; deployment. Pods are contained within zones. Each zone can contain one or more pods; in the Basic Installation, you will have just one pod in your zone.",
+"message.installwizard.copy.whatisazone": "A zone is the largest organizational unit within a CloudStack™; deployment. A zone typically corresponds to a single datacenter, although it is permissible to have multiple zones in a datacenter. The benefit of organizing infrastructure into zones is to provide physical isolation and redundancy. For example, each zone can have its own power supply and network uplink, and the zones can be widely separated geographically (though this is not required).",
+"message.installwizard.copy.whatiscloudstack": "CloudStack™ is a software platform that pools computing resources to build public, private, and hybrid Infrastructure as a Service (IaaS) clouds. CloudStack™ manages the network, storage, and compute nodes that make up a cloud infrastructure. Use CloudStack™ to deploy, manage, and configure cloud computing environments.<br/><br/>Extending beyond individual virtual machine images running on commodity hardware, CloudStack™ provides a turnkey cloud infrastructure software stack for delivering virtual datacenters as a service - delivering all of the essential components to build, deploy, and manage multi-tier and multi-tenant cloud applications. Both open-source and Premium versions are available, with the open-source version offering nearly identical features.",
+"message.installwizard.copy.whatisprimarystorage": "A CloudStack™; cloud infrastructure makes use of two types of storage: primary storage and secondary storage. Both of these can be iSCSI or NFS servers, or localdisk.<br/><br/><strong>Primary storage</strong> is associated with a cluster, and it stores the disk volumes of each guest VM for all the VMs running on hosts in that cluster. The primary storage server is typically located close to the hosts.",
 "message.installwizard.copy.whatissecondarystorage": "Secondary storage is associated with a zone, and it stores the following:<ul><li>Templates - OS images that can be used to boot VMs and can include additional configuration information, such as installed applications</li><li>ISO images - OS images that can be bootable or non-bootable</li><li>Disk volume snapshots - saved copies of VM data which can be used for data recovery or to create new templates</ul>",
 "message.installwizard.now.building": "Now building your cloud...",
 "message.installwizard.tooltip.addcluster.name": "A name for the cluster.  This can be text of your choosing and is not used by CloudStack.",
