feat: 应用商店 - 新增

--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -3290,6 +3290,7 @@
 
 
 "label.appmanager.appname":"\u5E94\u7528\u540D\u79F0",
+"label.appmanager.icon":"\u5E94\u7528 Icon",
 "label.appmanager.appdescription":"\u5E94\u7528\u63CF\u8FF0",
 "label.appmanager.instance":"\u6240\u5C5E\u5B9E\u4F8B",
 "label.appmanager.appstatus":"\u5E94\u7528\u72B6\u6001",
