feat: 应用详情页 & 删除 & 编辑

--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -115,6 +115,7 @@
 "label.action.delete.nic": "\u79fb\u9664 NIC",
 "label.action.delete.physical.network": "\u5220\u9664\u7269\u7406\u7f51\u7edc",
 "label.action.delete.pod": "\u5220\u9664\u63d0\u4f9b\u70b9",
+"label.action.delete.application": "\u5220\u9664\u5e94\u7528",
 "label.action.delete.pod.processing": "\u6b63\u5728\u5220\u9664\u63d0\u4f9b\u70b9...",
 "label.action.delete.primary.storage": "\u5220\u9664\u4e3b\u5b58\u50a8",
 "label.action.delete.primary.storage.processing": "\u6b63\u5728\u5220\u9664\u4e3b\u5b58\u50a8...",
@@ -1391,6 +1392,7 @@
 "label.na": "\u65e0",
 "label.name": "\u540d\u79f0",
 "label.name.optional": "\u540d\u79f0(\u53ef\u9009)",
+"label.icon": "Icon",
 "label.nat": "BigSwitch BCF  NAT \u5df2\u542f\u7528",
 "label.nat.port.range": "NAT \u7aef\u53e3\u8303\u56f4",
 "label.ncc": "NCC",
@@ -2373,6 +2375,7 @@
 "message.action.delete.nexusvswitch": "\u8bf7\u786e\u8ba4\u60a8\u786e\u5b9e\u8981\u5220\u9664\u6b64 Nexus 1000v",
 "message.action.delete.physical.network": "\u8bf7\u786e\u8ba4\u60a8\u786e\u5b9e\u8981\u5220\u9664\u6b64\u7269\u7406\u7f51\u7edc",
 "message.action.delete.pod": "\u8bf7\u786e\u8ba4\u60a8\u786e\u5b9e\u8981\u5220\u9664\u6b64\u63d0\u4f9b\u70b9\u3002",
+"message.action.delete.application": "\u8bf7\u786e\u8ba4\u60a8\u786e\u5b9e\u8981\u5220\u9664\u6b64\u5e94\u7528\u3002",
 "message.action.delete.primary.storage": "\u8bf7\u786e\u8ba4\u60a8\u786e\u5b9e\u8981\u5220\u9664\u6b64\u4e3b\u5b58\u50a8\u3002",
 "message.action.delete.secondary.storage": "\u8bf7\u786e\u8ba4\u60a8\u786e\u5b9e\u8981\u5220\u9664\u6b64\u4e8c\u7ea7\u5b58\u50a8\u3002",
 "message.action.delete.security.group": "\u8bf7\u786e\u8ba4\u60a8\u786e\u5b9e\u8981\u5220\u9664\u6b64\u5b89\u5168\u7ec4\u3002",
