feat: 应用商店- 列表 & 删除

--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -627,6 +627,7 @@
   "label.create.user": "Create user",
 "label.create.vpn.connection": "\u521b\u5efa VPN \u8fde\u63a5",
 "label.created": "\u521b\u5efa\u65e5\u671f",
+"label.instanceid": "\u6240\u5c5e\u5b9e\u4f8b",
 "label.created.by.system": "\u7531\u7cfb\u7edf\u521b\u5efa",
 "label.createnfscache": "\u521b\u5efa NFS \u4e8c\u7ea7\u6682\u5b58\u5b58\u50a8",
   "label.creating.iprange": "Creating IP Ranges",
@@ -1505,7 +1506,7 @@
 "label.opendaylight.controller": "OpenDaylight \u63a7\u5236\u5668",
 "label.opendaylight.controllerdetail": "OpenDaylight \u63a7\u5236\u5668\u8be6\u7ec6\u4fe1\u606f",
 "label.opendaylight.controllers": "OpenDaylight \u63a7\u5236\u5668",
-"label.operation": "Operation",
+"label.operation": "\u64cd\u4f5c",
 "label.optional": "\u53ef\u9009",
 "label.order": "\u6392\u5e8f",
 "label.oscategoryid": "\u64cd\u4f5c\u7cfb\u7edf\u9996\u9009\u9879",
