--- a/src/locales/zh_CN.properties
+++ b/src/locales/zh_CN.properties
@@ -3297,6 +3297,7 @@
 "label.appStore.appIcon":"\u5E94\u7528\u56FE\u6807",
 "label.appStore.runScript":"\u9ED8\u8BA4\u6267\u884C\u811A\u672C",
 "label.appStore.remark":"\u5907\u6CE8",
+"label.appStore.createAppStore":"\u6DFB\u52A0\u5E94\u7528\u6A21\u677F",
 
 "label.appmanager.appname":"\u5E94\u7528\u540D\u79F0",
 "label.appmanager.icon":"\u5E94\u7528 Icon",
