-1.3.	应用详情页面：翻译明细字段及值（日期格式化、状态格式化）；

--- a/src/locales/zh_CN.properties
+++ b/src/locales/zh_CN.properties
@@ -3299,6 +3299,17 @@
 "label.appStore.remark":"\u5907\u6CE8",
 "label.appStore.createAppStore":"\u6DFB\u52A0\u5E94\u7528\u6A21\u677F",
 
+"label.appStore.detail.name":"\u5E94\u7528\u540D\u79F0",
+"label.appStore.detail.uuid":"ID",
+"label.appStore.detail.icon":"\u5E94\u7528\u56FE\u6807",
+"label.appStore.detail.instance_count":"\u5DF2\u5B89\u88C5\u5B9E\u4F8B\u6570",
+"label.appStore.detail.run_script":"\u9ED8\u8BA4\u6267\u884C\u811A\u672C",
+"label.appStore.detail.owner":"\u521B\u5EFA\u4EBA",
+"label.appStore.detail.created":"\u521B\u5EFA\u65F6\u95F4",
+"label.appStore.detail.last_updated":"\u66F4\u65B0\u65F6\u95F4",
+"label.appStore.detail.state":"\u72B6\u6001",
+"label.appStore.detail.remark":"\u5907\u6CE8",
+
 "label.appmanager.appname":"\u5E94\u7528\u540D\u79F0",
 "label.appmanager.icon":"\u5E94\u7528 Icon",
 "label.appmanager.appdescription":"\u5E94\u7528\u63CF\u8FF0",
