--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -3300,6 +3300,7 @@
 "label.appStore.createAppStore":"\u6DFB\u52A0\u5E94\u7528\u6A21\u677F",
 
 "label.appStore.detail.name":"\u5E94\u7528\u540D\u79F0",
+"label.appStore.detail.description":"\u5E94\u7528\u63CF\u8FF0",
 "label.appStore.detail.uuid":"ID",
 "label.appStore.detail.icon":"\u5E94\u7528\u56FE\u6807",
 "label.appStore.detail.instance_count":"\u5DF2\u5B89\u88C5\u5B9E\u4F8B\u6570",
