--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -622,6 +622,7 @@
   "label.create.project.role": "Create Project Role",
   "label.create.site.vpn.connection": "Create Site-to-Site VPN Connection",
   "label.create.site.vpn.gateway": "Create Site-to-Site VPN Gateway",
+"label.create.snapshot.for.volume": "Created snapshot for volume",
 "label.create.ssh.key.pair": "\u751f\u6210SSH\u5bc6\u94a5\u5bf9",
 "label.create.template": "\u521b\u5efa\u6a21\u677f",
   "label.create.user": "Create user",
@@ -2257,6 +2258,7 @@
 "label.vnmc.devices": "VNMC \u8bbe\u5907",
 "label.volgroup": "\u5377\u7ec4",
 "label.volume": "\u5377",
+"label.volumeid": "Volume",
 "label.volume.details": "\u5377\u8be6\u7ec6\u4fe1\u606f",
 "label.volume.empty": "No data volumes attached to this VM",
 "label.volume.ids": "Volume ID's",
@@ -2325,6 +2327,7 @@
 "label.welcome.cloud.console": "\u6b22\u8fce\u4f7f\u7528\u7ba1\u7406\u63a7\u5236\u53f0",
 "label.what.is.cloudstack": "\u4ec0\u4e48\u662f CloudStack™?",
   "label.windows": "Windows",
+"label.with.snapshotid": "with snapshot ID",
   "label.write": "Write",
   "label.writeback": "Write-back disk caching",
 "label.writecachetype": "\u5199\u5165\u7f13\u5b58\u7c7b\u578b",
