--- a/src/locales/zh_CN.json
+++ b/src/locales/zh_CN.json
@@ -3325,6 +3325,15 @@
 "label.appmanager.instance":"\u6240\u5C5E\u5B9E\u4F8B",
 "label.appmanager.appstatus":"\u5E94\u7528\u72B6\u6001",
 "label.appmanager.installtime":"\u5B89\u88C5\u65F6\u95F4",
-"label.appmanager.operation":"\u64CD\u4F5C"
+"label.appmanager.operation":"\u64CD\u4F5C",
+"label.appmanager.runscript":"\u8FD0\u884C\u811A\u672C\u8DEF\u5F84",
+"label.appmanager.ip":"IP",
+"label.appmanager.port":"\u7AEF\u53E3",
+"label.appmanager.login_user":"\u767B\u5F55\u7528\u6237",
+"label.appmanager.login_password":"\u767B\u5F55\u5BC6\u7801",
+"label.instance_name":"\u6240\u5C5E\u5B9E\u4F8B",
+"label.run_script":"\u8FD0\u884C\u811A\u672C\u8DEF\u5F84",
+"label.login_user":"\u767B\u5F55\u7528\u6237",
+"label.login_password":"\u767B\u5F55\u5BC6\u7801"
 
 }
